# rop-hotd-imdb-scraper

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
development_files/: data_cleaning.ipynb  eda.ipynb  get_episodes_list.ipynb  hotd_google_trends.csv  rop_google_trends.csv  scrape_imdb_series.py  test.py  test_something.ipynb
src/: scrape_imdb_reviews.py  scrape_reviews.py
src/dependencies/: engineering.py  general.py  language.py  plotting.py  scrapers.py  scraping_utils.py
