[tool.poetry]
name = "imdb-scraper"
version = "0.1.0"
description = "Scrape imdb reviews."
authors = ["aleenprd <predaalin2694@gmail.com>"]
readme = "README.md"
packages = [{include = "imdb_scraper"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "4.11.1"
pandas = "1.3.4"
requests = "2.22.0"
selenium = "^4.5"
webdriver-manager = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
