[tool.poetry]
name = "imdb-scraper"
version = "0.1.0"
description = "Scrape imdb reviews."
authors = ["aleenprd <predaalin2694@gmail.com>"]
readme = "README.md"
packages = [{include = "imdb_scraper"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.1"
numpy = "^1.23.4"
selenium = "^4.5.0"
webdriver-manager = "^3.8.4"
packaging = "^21.3"
bs4 = "^0.0.1"
lxml = "^4.9.1"
spacy = "^3.4.2"
nltk = "^3.7"
sklearn = "^0.0"
seaborn = "^0.12.1"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
